--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,21 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
-</head>
-<body class="bg-purple-600">
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="./output.css" rel="stylesheet">
+        <title>Portifólio</title>
+    </head>
+    <body class="font-main">
+        <header class="flex flex-row justify-between items-center px-8 py-9 bg-black text-white">
+            <div class="flex flex-row gap-4 items-center">
+                <div class="size-12"><img src="./img/Logo.svg" alt=""></div>
+            <h1 class="text-4xl">Portifólio</h1>
+            </div>
+            <div class="size-8">
+                <img src="./img/Hamburguer.svg" alt="">
+            </div>
+        </header>
+    </body>
+
 </html>
