--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,14 @@
         <title>Portifólio</title>
     </head>
     <body class="font-main">
+        <header class="flex flex-row justify-between items-center px-8 py-9 bg-black text-white">
+            <div class="flex flex-row gap-4 items-center">
+                <div class="size-12"><img src="./img/Logo.svg" alt=""></div>
+            <h1 class="text-4xl">Portifólio</h1>
+            </div>
+            <div class="size-8">
+                <img src="./img/Hamburguer.svg" alt="">
+            </div>
+        </header>
     </body>
 </html>
