--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
         <title>Portifólio</title>
     </head>
     <body class="font-main">
+        <!-- Seção header -->
         <header class="flex flex-row justify-between items-center px-8 py-9 bg-black text-white">
             <div class="flex flex-row gap-4 items-center">
                 <div class="size-12"><img src="./img/Logo.svg" alt=""></div>
@@ -16,5 +17,41 @@
                 <img src="./img/Hamburguer.svg" alt="">
             </div>
         </header>
+        <!-- Seção hero -->
+
+        <section class="text-black px-6 py-16 bg-white">
+            <div class="max-w-[400px] max-h-[400px]">
+                <img src="./img/Sally sem fundo 1.png" alt=""></div>
+            <div class="flex flex-col gap-12">
+                <div class="text-center flex flex-col items-center gap-8">
+                    <div class="flex flex-col gap-8">
+                        <h2 class="text-5xl">Conheça a <span class="text-secondary">Sally</span></h2>
+                        <div class="flex flex-col gap-4">
+                            <h3 class="text-2xl">A mascote da <span class="text-secondary">byron</span></h3>
+                            <p class="text-base">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus consectetur, sapiente aliquam facere quas inventore alias itaque veniam quos nobis!</p>
+                        </div>
+                    </div>
+                    <div>
+                        <button class="text-2xl font-semibold text-white bg-main px-4 py-2 rounded-2xl hover:bg-teal-600 transition duration-200">SAIBA MAIS</button>
+                    </div>
+                </div>
+                <div class="flex flex-row justify-between items-center">
+                    <p class="text-2xl">Nos contate</p>
+                    <div class="flex flex-row gap-6">
+                        <div class="size-12">
+                            <a href="#"><img src="img/instagram.png" alt=""></a>
+                        </div>
+
+                        <div class="size-12">
+                            <a href="#"><img src="./img/linkedin.png" alt=""></a>
+                        </div>
+
+                        <div class="size-12">
+                            <a href="#"><img src="./img/zap.png" alt=""></a></div>
+                        </div>
+                </div>
+            </div>
+        </section>
+
     </body>
 </html>
