--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,61 @@
                 </div>
             </div>
         </section>
+         <!-- Seção projetos -->
+
+        <section class="bg-secondary px-6 py-8 text-black flex flex-col gap-8 items-center">
+                <h2 class="text-white font-extrabold text-2xl">Ultimos projetos</h2>
+                <div class="grid grid-flow-row grid-cols-1 gap-12">
+                    <div class="flex flex-col bg-white max-w-[380px] rounded-lg p-3 gap-4 drop-shadow-lg">
+                        <div class="h-3/4 rounded-lg overflow-hidden"><img src="./img/card1.jpg" alt=""></div>
+                        <div class="h-1/4">
+                            <h3 class="text-lg">Projeto 1</h3>
+                            <p class="text-base text-gray">Aplicativo desktop</p>
+                        </div>                        
+                    </div>
+                
+                <div class="flex flex-col bg-white max-w-[380px] rounded-lg p-3 gap-4 drop-shadow-lg">
+                        <div class="h-3/4 rounded-lg overflow-hidden"><img src="./img/card2.png" alt=""></div>
+                        <div class="h-1/4">
+                            <h3 class="text-lg">Projeto 2</h3>
+                            <p class="text-base text-gray">Aplicativo desktop</p>
+                        </div>                        
+                    </div>
+
+                <div class="flex flex-col bg-white max-w-[380px] rounded-lg p-3 gap-4 drop-shadow-lg">
+                        <div class="h-3/4 rounded-lg overflow-hidden"><img src="./img/card3.png" alt=""></div>
+                        <div class="h-1/4">
+                            <h3 class="text-lg">Projeto 3</h3>
+                            <p class="text-base text-gray">Aplicativo desktop</p>
+                        </div>                        
+                    </div>
+
+                <div class="flex flex-col bg-white max-w-[380px] rounded-lg p-3 gap-4 drop-shadow-lg">
+                        <div class="h-3/4 rounded-lg overflow-hidden"><img src="./img/card2.png" alt=""></div>
+                        <div class="h-1/4">
+                            <h3 class="text-lg">Projeto 4</h3>
+                            <p class="text-base text-gray">Aplicativo desktop</p>
+                        </div>                        
+                    </div>
+
+                <div class="flex flex-col bg-white max-w-[380px] rounded-lg p-3 gap-4 drop-shadow-lg">
+                        <div class="h-3/4 rounded-lg overflow-hidden"><img src="./img/card3.png" alt=""></div>
+                        <div class="h-1/4">
+                            <h3 class="text-lg">Projeto 5</h3>
+                            <p class="text-base text-gray">Aplicativo desktop</p>
+                        </div>                        
+                    </div>
+
+                <div class="flex flex-col bg-white max-w-[380px] rounded-lg p-3 gap-4 drop-shadow-lg">
+                        <div class="h-3/4 rounded-lg overflow-hidden"><img src="./img/card1.jpg" alt=""></div>
+                        <div class="h-1/4">
+                            <h3 class="text-lg">Projeto 6</h3>
+                            <p class="text-base text-gray">Aplicativo desktop</p>
+                        </div>                        
+                    </div>
+                </div>
+        </section>
+
 
     </body>
 </html>
