--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,24 @@
                 </div>
         </section>
 
+        <!-- Footer -->
+         <footer class="bg-black text-white flex flex-col p-8 gap-16">
+            <div class="flex flex-col items-center gap-16">
+                <div class="flex flex-col items-center gap-3">
+                    <div class="size-16"><img src="./img/Logo.svg" alt=""></div>
+                    <p class="text-2xl">Desenvolvido por</p>
+                    <p class="text-xl">Felipe Augusto - DVP 2025</p>
+                </div>
+                <div class="text-center gap-2">
+                    <h3 class="text-2xl">SOBRE MIM</h3>
+                    <p class="text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis, incidunt aliquam! Libero, provident?</p>
+                </div>
+            </div>
+            <div class="flex flex-col items-center">
+                <p class="text-2xl">Desenvolvido por</p>
+                <div class="max-w-[260px]"><img src="./img/Logo_byron.png" alt=""></div>
+            </div>
+         </footer>
 
     </body>
 </html>
