--- a/src/index.html
+++ b/src/index.html
@@ -8,23 +8,30 @@
     </head>
     <body class="font-main">
         <!-- Seção header -->
-        <header class="flex flex-row justify-between items-center px-8 py-9 bg-black text-white">
+        <header class="flex flex-row justify-between items-center px-8 lg:px-30 py-9 bg-black text-white">
             <div class="flex flex-row gap-4 items-center">
                 <div class="size-12"><img src="./img/Logo.svg" alt=""></div>
             <h1 class="text-4xl">Portifólio</h1>
             </div>
-            <div class="size-8">
+            <div class="hidden lg:flex lg:flex-row items-center gap-8">
+                <a class="text-2xl hover:text-main transition duration-200" href="#">Início</a>
+                <a class="text-2xl hover:text-main transition duration-200" href="#">Projetos</a>
+                <a class="text-2xl font-semibold text-white bg-main px-4 py-2 rounded-2xl hover:bg-teal-600 transition duration-200" href="#">Fale conosco</a>
+            </div>
+            <div class="size-8 lg:hidden">
                 <img src="./img/Hamburguer.svg" alt="">
             </div>
         </header>
         <!-- Seção hero -->
 
-        <section class="text-black px-6 py-16 bg-white">
-            <div class="max-w-[400px] max-h-[400px]">
+        <section class="text-black px-6 lg:px-30 py-16 bg-white flex flex-col items-center lg:flex-row-reverse min-h-screen">
+            
+            <div class="lg:w-1/2 max-w-[400px] max-h-[400px] lg:max-w-[700px] lg:max-h-[700px]">
                 <img src="./img/Sally sem fundo 1.png" alt=""></div>
-            <div class="flex flex-col gap-12">
-                <div class="text-center flex flex-col items-center gap-8">
-                    <div class="flex flex-col gap-8">
+
+            <div class="lg:w-1/2 lg:max-w-[560px] flex flex-col gap-12">
+                <div class="text-center items-center lg:text-start flex flex-col lg:items-start gap-8">
+                    <div class="flex flex-col gap-8 max-w-3/4">
                         <h2 class="text-5xl">Conheça a <span class="text-secondary">Sally</span></h2>
                         <div class="flex flex-col gap-4">
                             <h3 class="text-2xl">A mascote da <span class="text-secondary">byron</span></h3>
@@ -32,10 +39,10 @@
                         </div>
                     </div>
                     <div>
-                        <button class="text-2xl font-semibold text-white bg-main px-4 py-2 rounded-2xl hover:bg-teal-600 transition duration-200">SAIBA MAIS</button>
+                        <a class="text-2xl font-semibold text-white bg-main px-4 py-2 rounded-2xl hover:bg-teal-600 transition duration-200" href="#">SAIBA MAIS</a>
                     </div>
                 </div>
-                <div class="flex flex-row justify-between items-center">
+                <div class="flex flex-row justify-between items-center lg:justify-start gap-8">
                     <p class="text-2xl">Nos contate</p>
                     <div class="flex flex-row gap-6">
                         <div class="size-12">
@@ -54,9 +61,9 @@
         </section>
          <!-- Seção projetos -->
 
-        <section class="bg-secondary px-6 py-8 text-black flex flex-col gap-8 items-center">
+        <section class="bg-secondary px-6 py-8 text-black flex flex-col items-center gap-8 lg:gap-16">
                 <h2 class="text-white font-extrabold text-2xl">Ultimos projetos</h2>
-                <div class="grid grid-flow-row grid-cols-1 gap-12">
+                <div class="grid grid-flow-row grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12">
                     <div class="flex flex-col bg-white max-w-[380px] rounded-lg p-3 gap-4 drop-shadow-lg">
                         <div class="h-3/4 rounded-lg overflow-hidden"><img src="./img/card1.jpg" alt=""></div>
                         <div class="h-1/4">
@@ -108,19 +115,19 @@
         </section>
 
         <!-- Footer -->
-         <footer class="bg-black text-white flex flex-col p-8 gap-16">
-            <div class="flex flex-col items-center gap-16">
-                <div class="flex flex-col items-center gap-3">
+         <footer class="bg-black text-white flex flex-col lg:items-center p-8 gap-16 lg:gap-8">
+            <div class="flex flex-col lg:flex-row items-center lg: justify-between gap-16">
+                <div class="flex flex-col items-center gap-3 lg:w-1/3">
                     <div class="size-16"><img src="./img/Logo.svg" alt=""></div>
                     <p class="text-2xl">Desenvolvido por</p>
                     <p class="text-xl">Felipe Augusto - DVP 2025</p>
                 </div>
-                <div class="text-center gap-2">
+                <div class="text-center gap-2 lg:w-1/3">
                     <h3 class="text-2xl">SOBRE MIM</h3>
                     <p class="text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis, incidunt aliquam! Libero, provident?</p>
                 </div>
             </div>
-            <div class="flex flex-col items-center">
+            <div class="flex flex-col lg:flex-row lg:justify-center gap-3 items-center">
                 <p class="text-2xl">Desenvolvido por</p>
                 <div class="max-w-[260px]"><img src="./img/Logo_byron.png" alt=""></div>
             </div>
