--- a/src/index.html
+++ b/src/index.html
@@ -27,15 +27,15 @@
         <section class="text-black px-6 lg:px-30 py-16 bg-white flex flex-col items-center lg:flex-row-reverse min-h-screen">
             
             <div class="lg:w-1/2 max-w-[400px] max-h-[400px] lg:max-w-[700px] lg:max-h-[700px]">
-                <img src="./img/Sally sem fundo 1.png" alt=""></div>
+                <img class="lg:w-[500px]" src="./img/luma.png" alt=""></div>
 
             <div class="lg:w-1/2 lg:max-w-[560px] flex flex-col gap-12">
                 <div class="text-center items-center lg:text-start flex flex-col lg:items-start gap-8">
                     <div class="flex flex-col gap-8 max-w-3/4">
-                        <h2 class="text-5xl">Conheça a <span class="text-secondary">Sally</span></h2>
+                        <h2 class="text-5xl">Conheça o <span class="text-secondary">Luma</span></h2>
                         <div class="flex flex-col gap-4">
-                            <h3 class="text-2xl">A mascote da <span class="text-secondary">byron</span></h3>
-                            <p class="text-base">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus consectetur, sapiente aliquam facere quas inventore alias itaque veniam quos nobis!</p>
+                            <h3 class="text-2xl">A mascote do <span class="text-secondary">Felipe</span></h3>
+                            <p class="text-base">Como mostra a foto, Luma adora dormir igual gente, em qualquer oportunidade está com a cabeça deitada no travesseiro pronta pra puxar um ronco!</p>
                         </div>
                     </div>
                     <div>
@@ -46,11 +46,11 @@
                     <p class="text-2xl">Nos contate</p>
                     <div class="flex flex-row gap-6">
                         <div class="size-12">
-                            <a href="#"><img src="img/instagram.png" alt=""></a>
+                            <a href="https://www.instagram.com/thefelipe.augusto/" target="_blank"><img src="img/instagram.png" alt=""></a>
                         </div>
 
                         <div class="size-12">
-                            <a href="#"><img src="./img/linkedin.png" alt=""></a>
+                            <a href="https://www.linkedin.com/in/felipe-augusto-377831357/" target="_blank"><img src="./img/linkedin.png" alt=""></a>
                         </div>
 
                         <div class="size-12">
@@ -65,66 +65,66 @@
                 <h2 class="text-white font-extrabold text-2xl">Ultimos projetos</h2>
                 <div class="grid grid-flow-row grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12">
                     <div class="flex flex-col bg-white max-w-[380px] rounded-lg p-3 gap-4 drop-shadow-lg">
-                        <div class="h-3/4 rounded-lg overflow-hidden"><img src="./img/card1.jpg" alt=""></div>
+                        <div class="h-3/4 rounded-lg overflow-hidden"><img src="./img/luma1.jpg" alt=""></div>
                         <div class="h-1/4">
                             <h3 class="text-lg">Projeto 1</h3>
-                            <p class="text-base text-gray">Aplicativo desktop</p>
+                            <p class="text-base text-gray">Dormir tarde</p>
                         </div>                        
                     </div>
                 
                 <div class="flex flex-col bg-white max-w-[380px] rounded-lg p-3 gap-4 drop-shadow-lg">
-                        <div class="h-3/4 rounded-lg overflow-hidden"><img src="./img/card2.png" alt=""></div>
+                        <div class="h-3/4 rounded-lg overflow-hidden "><img src="./img/luma2.jpg" alt=""></div>
                         <div class="h-1/4">
                             <h3 class="text-lg">Projeto 2</h3>
-                            <p class="text-base text-gray">Aplicativo desktop</p>
+                            <p class="text-base text-gray">Dormir até tarde</p>
                         </div>                        
                     </div>
 
                 <div class="flex flex-col bg-white max-w-[380px] rounded-lg p-3 gap-4 drop-shadow-lg">
-                        <div class="h-3/4 rounded-lg overflow-hidden"><img src="./img/card3.png" alt=""></div>
+                        <div class="h-3/4 rounded-lg overflow-hidden"><img src="./img/luma3.jpg" alt=""></div>
                         <div class="h-1/4">
                             <h3 class="text-lg">Projeto 3</h3>
-                            <p class="text-base text-gray">Aplicativo desktop</p>
+                            <p class="text-base text-gray">Acordar tarde</p>
                         </div>                        
                     </div>
 
                 <div class="flex flex-col bg-white max-w-[380px] rounded-lg p-3 gap-4 drop-shadow-lg">
-                        <div class="h-3/4 rounded-lg overflow-hidden"><img src="./img/card2.png" alt=""></div>
+                        <div class="h-3/4 rounded-lg overflow-hidden"><img src="./img/mel1.jpg" alt=""></div>
                         <div class="h-1/4">
                             <h3 class="text-lg">Projeto 4</h3>
-                            <p class="text-base text-gray">Aplicativo desktop</p>
+                            <p class="text-base text-gray">Dormir de dia (mel é irmã da luma)</p>
                         </div>                        
                     </div>
 
                 <div class="flex flex-col bg-white max-w-[380px] rounded-lg p-3 gap-4 drop-shadow-lg">
-                        <div class="h-3/4 rounded-lg overflow-hidden"><img src="./img/card3.png" alt=""></div>
+                        <div class="h-3/4 rounded-lg overflow-hidden"><img src="./img/mel2.jpg" alt=""></div>
                         <div class="h-1/4">
                             <h3 class="text-lg">Projeto 5</h3>
-                            <p class="text-base text-gray">Aplicativo desktop</p>
+                            <p class="text-base text-gray">Ficar em alerta de noite (mel é irmã da luma)</p>
                         </div>                        
                     </div>
 
                 <div class="flex flex-col bg-white max-w-[380px] rounded-lg p-3 gap-4 drop-shadow-lg">
-                        <div class="h-3/4 rounded-lg overflow-hidden"><img src="./img/card1.jpg" alt=""></div>
+                        <div class="h-3/4 rounded-lg overflow-hidden"><img src="./img/mel3.jpg" alt=""></div>
                         <div class="h-1/4">
                             <h3 class="text-lg">Projeto 6</h3>
-                            <p class="text-base text-gray">Aplicativo desktop</p>
+                            <p class="text-base text-gray">Protejer a casa a noite (mel é irmã da luma)</p>
                         </div>                        
                     </div>
                 </div>
         </section>
 
         <!-- Footer -->
-         <footer class="bg-black text-white flex flex-col lg:items-center p-8 gap-16 lg:gap-8">
+         <footer class="bg-black text-white flex flex-col items-center p-8 gap-16 lg:gap-8">
             <div class="flex flex-col lg:flex-row items-center lg: justify-between gap-16">
                 <div class="flex flex-col items-center gap-3 lg:w-1/3">
-                    <div class="size-16"><img src="./img/Logo.svg" alt=""></div>
+                    <div class="size-16 flex flex-col items-center"><img src="./img/Logo.svg" alt=""></div>
                     <p class="text-2xl">Desenvolvido por</p>
                     <p class="text-xl">Felipe Augusto - DVP 2025</p>
                 </div>
                 <div class="text-center gap-2 lg:w-1/3">
                     <h3 class="text-2xl">SOBRE MIM</h3>
-                    <p class="text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis, incidunt aliquam! Libero, provident?</p>
+                    <p class="text-base">Gosto mais de cachorros do que de mim mesmo, por favor não me tirem do trainee</p>
                 </div>
             </div>
             <div class="flex flex-col lg:flex-row lg:justify-center gap-3 items-center">
