fix: arrumando erros nos textos

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
             <div class="lg:w-1/2 lg:max-w-[560px] flex flex-col gap-12">
                 <div class="text-center items-center lg:text-start flex flex-col lg:items-start gap-8">
                     <div class="flex flex-col gap-8 max-w-3/4">
-                        <h2 class="text-5xl">Conheça o <span class="text-secondary">Luma</span></h2>
+                        <h2 class="text-5xl">Conheça a <span class="text-secondary">Luma</span></h2>
                         <div class="flex flex-col gap-4">
                             <h3 class="text-2xl">A mascote do <span class="text-secondary">Felipe</span></h3>
                             <p class="text-base">Como mostra a foto, Luma adora dormir igual gente, em qualquer oportunidade está com a cabeça deitada no travesseiro pronta pra puxar um ronco!</p>
@@ -108,7 +108,7 @@
                         <div class="h-3/4 rounded-lg overflow-hidden"><img src="./img/mel3.jpg" alt=""></div>
                         <div class="h-1/4">
                             <h3 class="text-lg">Projeto 6</h3>
-                            <p class="text-base text-gray">Protejer a casa a noite (mel é irmã da luma)</p>
+                            <p class="text-base text-gray">Proteger a casa a noite (mel é irmã da luma)</p>
                         </div>                        
                     </div>
                 </div>
